Changed the card height unit to % from vh on mobile to fix a bug

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -133,7 +133,7 @@ input {
 
 @media screen and (max-width: 25.5em) {
     .card {
-        height: 70vh;
+        height: 75%;
     }
 
     .card-title {
